<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PerfilMedico">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="-53dp"
        tools:layout_editor_absoluteY="29dp">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageButton
                android:id="@+id/img_editFechaNacPerfilMedico"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_marginStart="24dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/btnPerfilMedicoFecNacEdit"
                android:onClick="editarFechaNacMedico"
                android:scaleType="fitXY"
                app:layout_constraintBottom_toTopOf="@+id/txt_PerfilMedicoFecha"
                app:layout_constraintStart_toEndOf="@+id/txtPerfilMedFechaNacimiento"
                app:srcCompat="@drawable/edit" />

            <ImageView
                android:id="@+id/img_perfilMedicoFoto"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="60dp"
                android:contentDescription="@string/imgDescripPerfilMedicoFoto"
                android:scaleType="fitXY"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_launcher_background" />

            <TextView
                android:id="@+id/txt_perfilMedicoEspecMedico"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/txtEspecialidadMedicoTitle"
                android:textAlignment="viewStart"
                android:textColor="#FF0000"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.383"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_perfilMedicoNombreMedico" />

            <EditText
                android:id="@+id/txt_perfilMedicoNombreMedico"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:autofillHints="@string/txtNombreMedicoHint"
                android:hint="@string/txtNombreMedicoHint"
                android:inputType="text"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.517"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_perfilMedicoNombreMedTitle" />

            <Button
                android:id="@+id/btn_guardarPerfilMedico"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:onClick="guardarPerfilMedico"
                android:text="@string/btnGuardarDatosPerfilMedico"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_perfiMedicoUbicacionConsultorio" />

            <TextView
                android:id="@+id/txt_perfilMedicoNombreMedTitle"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="56dp"
                android:text="@string/txtNombreMedicoTitle"
                android:textColor="#FF0000"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.383"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_perfilMedicoFoto" />

            <EditText
                android:id="@+id/txt_perfilMedicoEspecialidad"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:autofillHints="@string/txtEspecialidadMedicoHint"
                android:ems="10"
                android:hint="@string/txtEspecialidadMedicoHint"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.517"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_perfilMedicoEspecMedico" />

            <TextView
                android:id="@+id/txtPerfilMedFechaNacimiento"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/txtFechaNacimientoMedicoTitle"
                android:textColor="#FF0303"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.383"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_perfilMedicoEspecialidad" />

            <EditText
                android:id="@+id/txt_PerfilMedicoFecha"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:autofillHints="@string/txtFechNacMedicoHint"
                android:ems="10"
                android:hint="@string/txtFechNacMedicoHint"
                android:inputType="date"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.517"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtPerfilMedFechaNacimiento" />

            <TextView
                android:id="@+id/txt_perfiMedicoUbicacionConsultorio"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/txtPerfiMedicoUbicacionConsultorio"
                android:textColor="#FF0000"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.383"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_PerfilMedicoFecha" />

            <ImageButton
                android:id="@+id/img_editNombrePerfilMedico"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_marginStart="24dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/btnPerfilMedicoNombreEdit"
                android:onClick="editarNombreMedico"
                android:scaleType="fitXY"
                app:layout_constraintBottom_toTopOf="@+id/txt_perfilMedicoNombreMedico"
                app:layout_constraintStart_toEndOf="@+id/txt_perfilMedicoNombreMedTitle"
                app:srcCompat="@drawable/edit" />

            <ImageButton
                android:id="@+id/img_editFotoCamaraPerfilMedico"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="40dp"
                android:contentDescription="@string/btnPerfilMedicoFotoEdit"
                android:onClick="cambiarFotoPerfilCamara"
                android:scaleType="fitCenter"
                app:layout_constraintStart_toEndOf="@+id/img_perfilMedicoFoto"
                app:layout_constraintTop_toTopOf="@+id/img_perfilMedicoFoto"
                app:srcCompat="@drawable/cameraicon" />

            <ImageButton
                android:id="@+id/img_editFotoGaleriaPerfilMedico"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:contentDescription="@string/btnPerfilMedicoFotoEdit"
                android:onClick="cambiarFotoPerfilGaleria"
                android:scaleType="fitCenter"
                app:layout_constraintStart_toEndOf="@+id/img_perfilMedicoFoto"
                app:layout_constraintTop_toTopOf="@+id/img_perfilMedicoFoto"
                app:srcCompat="@drawable/galeriaicon" />

            <ImageButton
                android:id="@+id/img_editUbicacionPerfilMedico"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/btnPerfilMedicoConsultorioEdit"
                android:onClick="editarUbicacionConsMedico"
                android:scaleType="fitXY"
                app:layout_constraintStart_toEndOf="@+id/txt_perfiMedicoUbicacionConsultorio"
                app:layout_constraintTop_toBottomOf="@+id/txt_PerfilMedicoFecha"
                app:srcCompat="@drawable/edit" />

            <ImageButton
                android:id="@+id/btnimg_editEspecialidadPerfilMedico"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_marginStart="24dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/btnPerfilMedicoEspecialidadEdit"
                android:onClick="editarEspecialidadMedico"
                android:scaleType="fitXY"
                app:layout_constraintBottom_toTopOf="@+id/txt_perfilMedicoEspecialidad"
                app:layout_constraintStart_toEndOf="@+id/txt_perfilMedicoEspecMedico"
                app:srcCompat="@drawable/edit" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>